--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
   "homepage": "https://github.com/coding-boot-camp/unit18hw#readme",
   "dependencies": {
     "compression": "^1.7.4",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "lite-server": "^2.5.3",
-    "mongoose": "^5.5.15",
     "mongodb": "^3.2.3",
     "mongojs": "^2.6.0",
+    "mongoose": "^5.5.15",
     "morgan": "^1.9.1"
   }
 }
